[package]
name = "fastq_dedup_ec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
seq_io = "0.3.1"
debruijn = "0.3.4"
multimap = "0.8.3"
rustc-hash = "1.1.0"

[profile.release]
debug = 1



